--- a/templates/html/inquiry/inquiry-create.html
+++ b/templates/html/inquiry/inquiry-create.html
@@ -106,7 +106,7 @@
                                 maxlength="1200"
                                 required
                                 value="{{data.description}}"
-                                placeholder="enquiry"
+                                placeholder="inquiry"
                             >{{data.description}}</textarea
                             >
                         </div>
