changed home page title to reflect dunosis

--- a/templates/html/home.html
+++ b/templates/html/home.html
@@ -19,8 +19,7 @@
                             max-md:min-w-[300px]">
                     <h1 class="text-6xl font-semibold uppercase 
                             leading-normal max-md:text-5xl max-md:leading-[70px]">
-                        Supercharge your Django 
-                        apps with Templates 🚀
+                        Dunosis LLC Web Development Django Template 🚀
                     </h1>
                     <div class="mt-5 p-2 text-justify max-md:max-w-full">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi consequuntur provident, aperiam blanditiis quia quae fugit commodi aliquam fugiat earum repellendus impedit ex perspiciatis iste a, sint possimus cupiditate odio? Delectus, recusandae! Iure porro illum sint labore, expedita inventore sapiente fugit, consectetur totam nemo temporibus sunt eligendi, odio esse!
