removed uneccessary html and template dir in blog app, added plausible analytics to base, updated readme file

--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -59,6 +59,9 @@
         gtag('config', '{% settings_value "ANALYTICS_TAG_ID" %}');
     </script>
 
+    <!-- Plausible Analytics-->
+    <script defer data-domain="example.com" src="https://plausible.io/js/script.js"></script>
+
     {% block head_tags %}
     {% endblock head_tags %}
 
